fix: tabs alignment, drop down, font uniformity add: contact form

--- a/src/pages/help.scss
+++ b/src/pages/help.scss
@@ -1,68 +1,72 @@
 // Styles for Help component
 .help-and-documentation {
-    padding: 20px;
-    max-width: 800px;
-    margin: 0 auto;
-    font-weight: 600;
+	padding: 20px;
+	max-width: 800px;
+	margin: 0 auto;
+	font-weight: 600;
 
-    h2 {
-        font-size: 28px;
-        margin-bottom: 20px;
-    }
+	text-center {
+		text-align: center;
+	}
 
-    .section {
-        margin-bottom: 40px;
-        box-shadow: 0px 0px 6px -2px rgba(0, 0, 0, 1);
-        padding: 20px;
-        border-radius: 5px;
+	h2 {
+		font-size: 28px;
+		margin-bottom: 20px;
+	}
 
-        h3 {
-            font-size: 24px;
-            margin-bottom: 16px;
-        }
+	.section {
+		margin-bottom: 40px;
+		box-shadow: 0px 0px 6px -2px rgba(0, 0, 0, 1);
+		padding: 20px;
+		border-radius: 5px;
 
-        p {
-            font-size: 16px;
-            line-height: 1.5;
-        }
+		h3 {
+			font-size: 24px;
+			margin-bottom: 16px;
+		}
 
-        ol {
-            list-style-type: decimal;
-            padding-left: 20px;
-            margin-top: 10px;
-        }
+		p {
+			font-size: 16px;
+			line-height: 1.5;
+		}
 
-        .faq {
-            .faq-item {
-                margin-bottom: 20px;
+		ol {
+			list-style-type: decimal;
+			padding-left: 20px;
+			margin-top: 10px;
+		}
 
-                h4 {
-                    font-size: 20px;
-                    margin-bottom: 10px;
-                }
-            }
-        }
-    }
+		.faq {
+			.faq-item {
+				margin-bottom: 20px;
 
-    @media (max-width: 768px) {
-        .section {
-            padding: 15px;
+				h4 {
+					font-size: 20px;
+					margin-bottom: 10px;
+				}
+			}
+		}
+	}
 
-            h3 {
-                font-size: 20px;
-            }
+	@media (max-width: 768px) {
+		.section {
+			padding: 15px;
 
-            p {
-                font-size: 14px;
-            }
+			h3 {
+				font-size: 20px;
+			}
 
-            .faq {
-                .faq-item {
-                    h4 {
-                        font-size: 18px;
-                    }
-                }
-            }
-        }
-    }
+			p {
+				font-size: 14px;
+			}
+
+			.faq {
+				.faq-item {
+					h4 {
+						font-size: 18px;
+					}
+				}
+			}
+		}
+	}
 }
