--- a/src/style/sass/partials/_footer.scss
+++ b/src/style/sass/partials/_footer.scss
@@ -30,10 +30,6 @@
 		}
 	}
 
-	&-subscription > p {
-		font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
-	}
-
 	&-input {
 		padding: 8px 20px;
 		border-radius: 2px;
